@@ -202,6 +202,7 @@ Views 6.x-3.0-dev
     o #809970 by dereine: Backport area_text test.
     o #808044 by dereine: Backport field date test.
     o by dereine: Add a test for field math, and fix the field math :)
+    o by dereine: Add a test for filter equality.
 
 Views 6.x-3.0-alpha3
     o #705668 by dereine: Fix glossary view, add tests for glossary view.
